--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,8 @@ sqlalchemy==2.0.27
 python-dotenv==1.0.0
 pydantic==2.6.1
 httpx==0.24.1
-supabase==2.3.5 
+supabase==0.7.1
+gotrue==0.5.0
+postgrest==0.10.6
+realtime==0.0.5
+storage3==0.5.4 
